# HSM

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  build.sh  test.sh
src/: CMakeLists.txt  main.cpp  state.cpp  state.hpp  stateMachine.cpp  stateMachine.hpp  state_cfg.hpp
test/: CMakeLists.txt  stateMachineTest.cpp  stateTest.cpp
